--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </tr>
             <tr>
                 <td>ShitComp 2</td>
-                <td>Manager/Comtent Maker</td>
+                <td>Manager/Content Maker</td>
                 <td>2016 – 2019</td>
             </tr>
             <tr>
@@ -85,6 +85,5 @@
         <br>
         <input type="submit" value="Push to talk">
     </form>
-
 </body>
 </html>
